hundred changes and improvements ...

--- a/Template/default/css/simple.person.contact.css
+++ b/Template/default/css/simple.person.contact.css
@@ -40,24 +40,24 @@ label[for=form_password_first] {
   width: 150px;
   margin: 0 0 10px 0;
 }
-#form_gender {
+#form_person_gender {
   float: left;
   width: 250px;
 }
-#form_gender input {
+#form_person_gender input {
   clear: left;
   float:left;
   width: 15px;
   margin: 5px 10px 0 0;
   padding: 0;
 }
-#form_gender label {
+#form_person_gender label {
   clear: none;
   float: left;
   width: 50px;
   text-align: left;
 }
-#form_gender label.required:after {
+#form_person_gender label.required:after {
   content: none;
 }
 input#form_zip {
@@ -70,10 +70,10 @@ input#form_city {
 .address_form input[type=submit] {
   width: 150px;
 }
-select#form_birthday_day,
-select#form_birthday_month {
+select#form_person_birthday_day,
+select#form_person_birthday_month {
   width: 40px;
 }
-select#form_birthday_year {
+select#form_person_birthday_year {
   width: 60px;
 }
