changed header information

--- a/Template/default/css/simple.contact.css
+++ b/Template/default/css/simple.contact.css
@@ -1,9 +1,10 @@
-/* 
-    Document   : simple.person.contact
-    Created on : 23.06.2013, 06:34:34
-    Author     : ralf
-    Description:
-        Purpose of the stylesheet follows.
+/*
+  Contact
+
+  @author Team phpManufaktur <team@phpmanufaktur.de>
+  @link https://kit2.phpmanufaktur.de/FacebookGallery
+  @copyright 2013 Ralf Hertsch <ralf.hertsch@phpmanufaktur.de>
+  @license MIT License (MIT) http://www.opensource.org/licenses/MIT
 */
 
 .clear {
