--- a/Template/default/simple.contact.twig
+++ b/Template/default/simple.contact.twig
@@ -9,7 +9,7 @@
 {% extends template_file('@framework', 'body.twig') %}
 {% block stylesheet %}
 	{{ parent() }}
-  <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/css/simple.person.contact.css" media="screen, projection" />
+  <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/css/simple.contact.css" media="screen, projection" />
 {% endblock %}
 
 {% block content %}
