--- a/Template/default/simple.list.twig
+++ b/Template/default/simple.list.twig
@@ -9,7 +9,7 @@
 {% extends template_file('@framework', 'body.twig') %}
 {% block stylesheet %}
 	{{ parent() }}
-  <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/css/simple.person.contact.css" media="screen, projection" />
+  <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/css/simple.list.css" media="screen, projection" />
 {% endblock %}
 
 {% block content %}
@@ -17,6 +17,61 @@
     <div class="message">{{ message }}</div>
   {% endif %}
   <div id="contact_list">
-    <p>dd</p>
+    {% include '@phpManufaktur/Contact/Template/default/pagination.twig' with {
+      currentPage: current_page,
+      paginationPath: pagination_route,
+      lastPage: last_page,
+      showAlwaysFirstAndLast: true,
+      addParameter: '?order=' ~ order_by|join(',') ~ '&direction=' ~ order_direction
+    } only %}
+    
+    <table>
+      <tr>  
+        {% set order_by_str = order_by|join(',') %}
+        {% for head in list.0|keys %}
+          {% if head in columns %}
+            {% set head_order = order_direction %}
+            {% set head_class = head %}
+            {% if (head == order_by_str) %}
+              {% if (head_order == 'asc') %}
+                {% set head_order = 'desc' %}                
+                {% set head_class = head_class ~ ' active asc' %}
+              {% else %}
+                {% set head_order = 'asc' %}
+                {% set head_class = head_class ~ ' active desc' %}
+              {% endif %}
+            {% endif %}  
+            {% set head_link = pagination_route ~ current_page ~ '?order=' ~ head ~ '&direction=' ~ head_order %}
+            <th class="{{ head_class }}"><a href="{{ head_link }}">{{ head|trans }}</a></th>  
+          {% endif %}
+        {% endfor %}
+      </tr>
+      {% set i = 0 %}
+      {% for contact in list %}
+        <tr class="{{ cycle(['flop','flip'], i) }}">
+          {% for column, value in contact %} 
+            {% if column in columns %}
+              {% if column == 'contact_id' %}
+                <td class="{{ column }}"><a href="{{ FRAMEWORK_URL }}/admin/contact/simple/contact/{{ value }}">{{ '%05d'|format(value) }}</a></td>
+              {% elseif column == 'communication_email' %}
+                <td class="{{ column }}"><a href="mailto:{{ value }}">{{ value }}</a></td>
+              {% else %}
+                <td class="{{ column }}">{{ value }}</td>
+              {% endif %}
+            {% endif %}
+          {% endfor %}
+        </tr>
+        {% set i = i+1 %}
+      {% endfor %}
+    </table>
+      
+    {% include '@phpManufaktur/Contact/Template/default/pagination.twig' with {
+      currentPage: current_page,
+      paginationPath: pagination_route,
+      lastPage: last_page,
+      showAlwaysFirstAndLast: true,
+      addParameter: '?order=' ~ order_by|join(',') ~ '&direction=' ~ order_direction
+    } only %}
+      
   </div>
 {% endblock content %}
