reformatted source and added comments

--- a/Template/default/pagination.twig
+++ b/Template/default/pagination.twig
@@ -6,7 +6,7 @@
   @copyright 2013 Ralf Hertsch <ralf.hertsch@phpmanufaktur.de>
   @license MIT License (MIT) http://www.opensource.org/licenses/MIT
 
-  pagination.twig is base on https://gist.github.com/SimonSimCity/4594748
+  pagination.twig is based on https://gist.github.com/SimonSimCity/4594748
 #}
 
 {% if lastPage > 1 %}
