--- a/Template/default/backend/simple/contact.twig
+++ b/Template/default/backend/simple/contact.twig
@@ -9,14 +9,14 @@
 {% extends template_file('@framework', 'body.twig') %}
 {% block stylesheet %}
 	{{ parent() }}
-  <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/css/simple.contact.css" media="screen, projection" />
+  <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/backend/simple/css/contact.css" media="screen, projection" />
 {% endblock %}
 
 {% block content %}
   {% if message|length > 0 %}
     <div class="message">{{ message }}</div>
   {% endif %}
-  <div class="address_form">
+  <div class="contact_form">
     <form action="{{ FRAMEWORK_URL }}/admin/contact/simple/contact" method="post">
       {{ form_widget(form) }}
       <div>
