--- a/Template/default/backend/simple/category.edit.twig
+++ b/Template/default/backend/simple/category.edit.twig
@@ -13,17 +13,18 @@
 {% endblock %}
 
 {% block content %}
+  {% if form.vars.value.category_type_id > 0 %}
+    <h1>{{ 'Edit the category %category_name%'|trans({'%category_name%':form.vars.value.category_type_name}) }}</h1>
+  {% else %}
+    <h1>{{ 'Create a new category'|trans }}</h1>
+  {% endif %}
   {% if message|length > 0 %}
     <div class="message">{{ message }}</div>
   {% endif %}
-  <div class="contact_form">
-    <form action="{{ FRAMEWORK_URL }}/admin/contact/simple/contact" method="post">
-      {{ form_widget(form) }}
-      <div>
-        <label for="submit">&nbsp;</label>
-        <input type="submit" name="submit" />
-      </div>
-      <div class="clear"></div>  
-    </form>
+    
+  {% include '@phpManufaktur/Contact/Template/default/backend/form/category.edit.twig' %}
+    
+  <div>
+    <p><a href="{{ FRAMEWORK_URL }}/admin/contact/simple/category/list">{{ 'Change to the overview'|trans }}</a></p>
   </div>
 {% endblock content %}
