--- a/Template/default/backend/form/pagination.twig
+++ b/Template/default/backend/form/pagination.twig
@@ -21,10 +21,10 @@
     <div class="pagination pagination-centered">
         <ul>
         {% if currentPage > 1 %}
-            <li><a href="{{ paginationPath }}{{ currentPage-1 }}{{ addParameter }}">&lArr;</a></li>
+            <li><a href="{{ paginationPath|replace({'{page}':currentPage-1}) }}">&lArr;</a></li>
 
             {% for i in range(1, extremePagesLimit) if ( i < currentPage - nearbyPagesLimit ) %}
-                <li><a href="{{ paginationPath }}{{ i }}{{ addParameter }}">{{ i }}</a></li>
+                <li><a href="{{ paginationPath|replace({'{page}':i}) }}">{{ i }}</a></li>
             {% endfor %}
 
             {% if extremePagesLimit + 1 < currentPage - nearbyPagesLimit %}
@@ -32,7 +32,7 @@
             {% endif %}
 
             {% for i in range(currentPage-nearbyPagesLimit, currentPage-1) if ( i > 0 ) %}
-                <li><a href="{{ paginationPath }}{{ i }}{{ addParameter }}">{{ i }}</a></li>
+                  <li><a href="{{ paginationPath|replace({'{page}':i}) }}">{{ i }}</a></li>
             {% endfor %}
         {% elseif showAlwaysFirstAndLast %}
             <li><a href="#">&lArr;</a></li>
@@ -42,7 +42,7 @@
 
         {% if currentPage < lastPage %}
             {% for i in range(currentPage+1, currentPage + nearbyPagesLimit) if ( i <= lastPage ) %}
-                <li><a href="{{ paginationPath }}{{ i }}{{ addParameter }}">{{ i }}</a></li>
+              <li><a href="{{ paginationPath|replace({'{page}' : i}) }}">{{ i }}</a></li>
             {% endfor %}
 
             {% if  (lastPage - extremePagesLimit) > (currentPage + nearbyPagesLimit) %}
@@ -50,12 +50,12 @@
             {% endif %}
 
             {% for i in range(lastPage - extremePagesLimit+1, lastPage) if ( i > currentPage + nearbyPagesLimit ) %}
-               <li><a href="{{ paginationPath }}{{ i }}{{ addParameter }}">{{ i }}</a></li>
+               <li><a href="{{ paginationPath|replace({'{page}' : i}) }}">{{ i }}</a></li>
             {% endfor %}
 
-            <li><a href="{{ paginationPath }}{{ currentPage+1 }}{{ addParameter }}">&rArr;</a></li>
+            <li><a href="{{ paginationPath|replace({'{page}' : currentPage+1}) }}">&rArr;</a></li>
         {% elseif showAlwaysFirstAndLast %}
-                <li><a href="{{ paginationPath }}{{ currentPage+1 }}{{ addParameter }}">&rArr;</a></li>
+                <li><a href="{{ paginationPath|replace({'{page}' : currentPage+1}) }}">&rArr;</a></li>
         {% endif %}
                 </ul>
     </div>
