--- a/Template/default/backend/simple/tag.edit.twig
+++ b/Template/default/backend/simple/tag.edit.twig
@@ -24,4 +24,7 @@
     
   {% include '@phpManufaktur/Contact/Template/default/backend/form/tag.edit.twig' %}
     
+  <div>
+    <p><a href="{{ FRAMEWORK_URL }}/admin/contact/simple/tag/list">{{ 'Change to the overview'|trans }}</a></p>
+  </div>  
 {% endblock content %}
