--- a/Template/default/backend/simple/edit.title.twig
+++ b/Template/default/backend/simple/edit.title.twig
@@ -22,7 +22,7 @@
     <div class="message">{{ message }}</div>
   {% endif %}
     
-  {% include '@phpManufaktur/Contact/Template/default/backend/form/title.edit.twig' %}
+  {% include '@phpManufaktur/Contact/Template/default/backend/form/edit.title.twig' %}
     
   <div>
     <p><a href="{{ FRAMEWORK_URL }}/admin/contact/simple/title/list">{{ 'Change to the overview'|trans }}</a></p>
