--- a/Template/default/backend/simple/edit.person.contact.twig
+++ b/Template/default/backend/simple/edit.person.contact.twig
@@ -9,19 +9,12 @@
 {% extends template_file('@framework', 'body.twig') %}
 {% block stylesheet %}
 	{{ parent() }}
-  <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/backend/simple/css/list.css" media="screen, projection" />
+  <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/backend/simple/css/contact.css" media="screen, projection" />
 {% endblock %}
 
 {% block content %}
-  <h1>{{ 'Tag list'|trans }}</h1>
   {% if message|length > 0 %}
     <div class="message">{{ message }}</div>
   {% endif %}
-  
-  {% include '@phpManufaktur/Contact/Template/default/backend/form/tag.list.twig' %}  
-    
-  <div>
-    <p><a href="{{ FRAMEWORK_URL }}/admin/contact/simple/tag/edit">{{ 'Add a new tag'|trans }}</a></p>
-  </div>  
-  
+  {% include '@phpManufaktur/Contact/Template/default/backend/form/edit.person.contact.twig' %}
 {% endblock content %}
