--- a/Template/default/backend/simple/list.contact.twig
+++ b/Template/default/backend/simple/list.contact.twig
@@ -17,6 +17,6 @@
     <div class="message">{{ message }}</div>
   {% endif %}
   
-  {% include '@phpManufaktur/Contact/Template/default/backend/form/contact.list.twig' %}   
+  {% include '@phpManufaktur/Contact/Template/default/backend/form/list.contact.twig' %}   
     
 {% endblock content %}
