--- a/Template/default/backend/simple/list.title.twig
+++ b/Template/default/backend/simple/list.title.twig
@@ -13,15 +13,15 @@
 {% endblock %}
 
 {% block content %}
-  <h1>{{ 'Category type list'|trans }}</h1>
+  <h1>{{ 'Title list'|trans }}</h1>
   {% if message|length > 0 %}
     <div class="message">{{ message }}</div>
   {% endif %}
   
-  {% include '@phpManufaktur/Contact/Template/default/backend/form/category.list.twig' %}  
+  {% include '@phpManufaktur/Contact/Template/default/backend/form/list.title.twig' %}  
     
   <div>
-    <p><a href="{{ FRAMEWORK_URL }}/admin/contact/simple/category/edit">{{ 'Add a new category'|trans }}</a></p>
+    <p><a href="{{ FRAMEWORK_URL }}/admin/contact/simple/title/edit">{{ 'Add a new title'|trans }}</a></p>
   </div>  
   
 {% endblock content %}
