--- a/Template/default/backend/form/edit.company.contact.twig
+++ b/Template/default/backend/form/edit.company.contact.twig
@@ -10,34 +10,89 @@
 <div class="contact_form">
   <form action="{{ FRAMEWORK_URL ~ route.action }}" method="post" {{ form_enctype(form) }}>
     {{ form_errors(form) }}
+        
+    <fieldset> 
+      <legend>{{ 'Contact definition'|trans }}</legend>
+      {{ form_row(form.contact_type) }}     
+      {{ form_row(form.contact_id) }}
+      <div>
+        <label>{{ 'contact_id'|trans }}</label>
+        <div class="value">
+          {% if form.contact_id.vars.value > 0 %}
+            {{ form.contact_id.vars.value }}
+          {% else %}
+            {{ '- new contact -'|trans }}
+          {% endif %}
+        </div>
+      </div>}
+      {{ form_row(form.contact_status) }}
+      {{ form_row(form.category) }}
+      {{ form_row(form.tags) }}
+      <div class="extra_space"></div>
+      {{ form_row(form.contact_name) }}
+      {{ form_row(form.contact_login) }}
+    </fieldset>
       
-    {{ form_row(form.contact_type) }}
+    <div class="extra_space"></div>
+    
+    <fieldset>
+      <legend>{{ 'Company'|trans }}</legend>
+      {{ form_row(form.company_id) }}
+      {{ form_row(form.company_name) }}
+      {{ form_row(form.company_department) }}
+      {{ form_row(form.company_additional) }}
+      {{ form_row(form.company_additional_2) }}
+      {{ form_row(form.company_additional_3) }}
+    </fieldset>
+    
+    <div class="extra_space"></div>
+    
+    <fieldset>
+      <legend>{{ 'Communication'|trans }}</legend>
+      {{ form_row(form.email_id) }}
+      {{ form_row(form.email_value) }}
+      {{ form_row(form.phone_id) }}
+      {{ form_row(form.phone) }}
+      {{ form_row(form.cell_id) }}
+      {{ form_row(form.cell) }}
+      {{ form_row(form.fax_id) }}
+      {{ form_row(form.fax) }}
+      {{ form_row(form.url_id) }}
+      {{ form_row(form.url) }}
+    </fieldset>
+      
+    <div class="extra_space"></div>
+    
+    <fieldset>
+      <legend>{{ 'Business address'|trans }}</legend>
+      {{ form_row(form.address_business_id) }}
+      {{ form_row(form.address_business_street) }}
+      {{ form_row(form.address_business_zip) }}
+      {{ form_row(form.address_business_city) }}
+      {{ form_row(form.address_business_country) }}
+    </fieldset>
+    
+    <div class="extra_space"></div>
      
-    {{ form_row(form.contact_id) }}
-    <div>
-      <label>{{ 'contact_id'|trans }}</label>
-      <div class="value">
-        {% if form.contact_id.vars.value > 0 %}
-          {{ form.contact_id.vars.value }}
-        {% else %}
-          {{ '- new contact -'|trans }}
-        {% endif %}
-      </div>
-    </div>
-    {{ form_row(form.contact_status) }}
-    {{ form_row(form.category) }}
-    {{ form_row(form.tags) }}
-      
-    {{ form_row(form.contact_name) }}
-    {{ form_row(form.contact_login) }}
-      
-    {{ form_row(form.company_name) }}
-    {{ form_row(form.company_department) }}
-    {{ form_row(form.company_additional) }}
-    {{ form_row(form.company_additional_2) }}
-    {{ form_row(form.company_additional_3) }}
-      
+    <fieldset>
+      <legend>{{ 'Delivery address'|trans }}</legend>
+      {{ form_row(form.address_delivery_id) }}
+      {{ form_row(form.address_delivery_street) }}
+      {{ form_row(form.address_delivery_zip) }}
+      {{ form_row(form.address_delivery_city) }}
+      {{ form_row(form.address_delivery_country) }}
+    </fieldset>
+    
+    <div class="extra_space"></div>
+     
+    <fieldset>
+      <legend>{{ 'Note'|trans }}</legend>
+      {{ form_row(form.note_id) }}
+      {{ form_row(form.note) }}
+    </fieldset>
+    
     {{ form_rest(form) }}  
+    <div class="extra_space"></div>
     <div>
       <label for="submit">&nbsp;</label>
       <input type="submit" name="submit" />
