--- a/Template/default/backend/form/list.contact.twig
+++ b/Template/default/backend/form/list.contact.twig
@@ -9,81 +9,88 @@
 
 <div id="contact_list">
     
-  {#  
-      The pagination serve a automatic 1 2 3 ... 17 18 19 pagination and 
-      navigation for the table if it contain more rows than specified in: 
-      /Contact/Control/Dialog/Simple/SimpleList.json 
-      Changes here must be also done at the footer of the table!
-   #}  
-  {% include '@phpManufaktur/Contact/Template/default/backend/form/pagination.twig' with {
-    currentPage: current_page,
-    paginationPath: FRAMEWORK_URL ~ route.pagination|replace({'{order}':order_by|join(','), '{direction}':order_direction}),
-    lastPage: last_page,
-    showAlwaysFirstAndLast: true
-  } only %}
+  {% if (list|length < 1) %}
+    {# The contact list does not contain any data #}
+    <div class="message">
+      {{ 'The contact list is empty.'|trans }}
+    </div>
+  {% else %}
+    {#  
+        The pagination serve a automatic 1 2 3 ... 17 18 19 pagination and 
+        navigation for the table if it contain more rows than specified in: 
+        /Contact/Control/Dialog/Simple/SimpleList.json 
+        Changes here must be also done at the footer of the table!
+     #}  
+    {% include '@phpManufaktur/Contact/Template/default/backend/form/pagination.twig' with {
+      currentPage: current_page,
+      paginationPath: FRAMEWORK_URL ~ route.pagination|replace({'{order}':order_by|join(','), '{direction}':order_direction}),
+      lastPage: last_page,
+      showAlwaysFirstAndLast: true
+    } only %}
 
-  <table>
-    <thead>
-      <tr>  
-        {# 
-            Enable an automatic ordering of the table by the columns, just
-            clicking at the head of the column. Default order is specified in:
-            /Contact/Control/Dialog/Simple/SimpleList.json
-         #}
-        {% set order_by_str = order_by|join(',') %}
-        {% for head in list.0|keys %}
-          {% if head in columns %}
-            {% set head_order = order_direction %}
-            {% set head_class = head %}
-            {% if (head == order_by_str) %}
-              {% if (head_order == 'asc') %}
-                {% set head_order = 'desc' %}                
-                {% set head_class = head_class ~ ' active asc' %}
-              {% else %}
-                {% set head_order = 'asc' %}
-                {% set head_class = head_class ~ ' active desc' %}
-              {% endif %}
-            {% endif %}  
-            <th class="{{ head_class }}"><a href="{{ route.pagination|replace({'{page}':current_page, '{order}':head, '{direction}':head_order}) }}">{{ head|trans }}</a></th>  
-          {% endif %}
-        {% endfor %}
-      </tr>
-    </thead>
-    <tbody>
-      {% set i = 0 %}
-      {% for contact in list %}
-        <tr class="{{ cycle(['flop','flip'], i) }}">
-          {% for column, value in contact %} 
-            {% if column in columns %}
-              {% if column == 'contact_id' %}
-                <td class="{{ column }}">
-                  {% if contact.contact_type == 'PERSON' %}
-                    <a href="{{ FRAMEWORK_URL ~ route.contact.person|replace({'{contact_id}':value}) }}">{{ '%05d'|format(value) }}</a>
-                  {% else %}
-                    <a href="{{ FRAMEWORK_URL ~ route.contact.company|replace({'{contact_id}':value}) }}">{{ '%05d'|format(value) }}</a>
-                  {% endif %}
-                </td>
-              {% elseif column == 'communication_email' %}
-                <td class="{{ column }}"><a href="mailto:{{ value }}">{{ value }}</a></td>
-              {% else %}
-                <td class="{{ column }}">{{ value }}</td>
-              {% endif %}
+    <table>
+      <thead>
+        <tr>  
+          {# 
+              Enable an automatic ordering of the table by the columns, just
+              clicking at the head of the column. Default order is specified in:
+              /Contact/Control/Dialog/Simple/SimpleList.json
+           #}
+          {% set order_by_str = order_by|join(',') %}
+          {% for head in list.0|keys %}
+            {% if head in columns %}
+              {% set head_order = order_direction %}
+              {% set head_class = head %}
+              {% if (head == order_by_str) %}
+                {% if (head_order == 'asc') %}
+                  {% set head_order = 'desc' %}                
+                  {% set head_class = head_class ~ ' active asc' %}
+                {% else %}
+                  {% set head_order = 'asc' %}
+                  {% set head_class = head_class ~ ' active desc' %}
+                {% endif %}
+              {% endif %}  
+              <th class="{{ head_class }}"><a href="{{ FRAMEWORK_URL ~ route.pagination|replace({'{page}':current_page, '{order}':head, '{direction}':head_order}) }}">{{ head|trans }}</a></th>  
             {% endif %}
           {% endfor %}
         </tr>
-        {% set i = i+1 %}
-      {% endfor %}
-    </tbody>
-  </table>
+      </thead>
+      <tbody>
+        {% set i = 0 %}
+        {% for contact in list %}
+          <tr class="{{ cycle(['flop','flip'], i) }}">
+            {% for column, value in contact %} 
+              {% if column in columns %}
+                {% if column == 'contact_id' %}
+                  <td class="{{ column }}">
+                    {% if contact.contact_type == 'PERSON' %}
+                      <a href="{{ FRAMEWORK_URL ~ route.contact.person|replace({'{contact_id}':value}) }}">{{ '%05d'|format(value) }}</a>
+                    {% else %}
+                      <a href="{{ FRAMEWORK_URL ~ route.contact.company|replace({'{contact_id}':value}) }}">{{ '%05d'|format(value) }}</a>
+                    {% endif %}
+                  </td>
+                {% elseif column == 'communication_email' %}
+                  <td class="{{ column }}"><a href="mailto:{{ value }}">{{ value }}</a></td>
+                {% else %}
+                  <td class="{{ column }}">{{ value }}</td>
+                {% endif %}
+              {% endif %}
+            {% endfor %}
+          </tr>
+          {% set i = i+1 %}
+        {% endfor %}
+      </tbody>
+    </table>
 
-  {#
-      See top of the table for more information!
-   #}
-  {% include '@phpManufaktur/Contact/Template/default/backend/form/pagination.twig' with {
-    currentPage: current_page,
-    paginationPath: FRAMEWORK_URL ~ route.pagination|replace({'{order}':order_by|join(','), '{direction}':order_direction}),
-    lastPage: last_page,
-    showAlwaysFirstAndLast: true
-  } only %}
-
+    {#
+        See top of the table for more information!
+     #}
+    {% include '@phpManufaktur/Contact/Template/default/backend/form/pagination.twig' with {
+      currentPage: current_page,
+      paginationPath: FRAMEWORK_URL ~ route.pagination|replace({'{order}':order_by|join(','), '{direction}':order_direction}),
+      lastPage: last_page,
+      showAlwaysFirstAndLast: true
+    } only %}
+  {% endif %}
+  
 </div>
