--- a/Template/default/backend/simple/edit.person.contact.twig
+++ b/Template/default/backend/simple/edit.person.contact.twig
@@ -10,11 +10,14 @@
 {% block stylesheet %}
 	{{ parent() }}
   <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/backend/simple/css/contact.css" media="screen, projection" />
+  <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/backend/simple/css/person.contact.css" media="screen, projection" />
 {% endblock %}
 
 {% block content %}
   {% if message|length > 0 %}
     <div class="message">{{ message }}</div>
   {% endif %}
+    
   {% include '@phpManufaktur/Contact/Template/default/backend/form/edit.person.contact.twig' %}
+    
 {% endblock content %}
