--- a/Template/default/backend/form/list.contact.twig
+++ b/Template/default/backend/form/list.contact.twig
@@ -10,7 +10,7 @@
 <div id="contact_list">
     
   {% if (list|length < 1) %}
-    {# The contact list does not contain any data #}
+    {# The contact list does not contain any data! #}
     <div class="message">
       {{ 'The contact list is empty.'|trans }}
     </div>
