company contact handling in progress and nearly finished

--- a/Template/default/backend/form/edit.company.contact.twig
+++ b/Template/default/backend/form/edit.company.contact.twig
@@ -27,7 +27,7 @@
       </div>}
       {{ form_row(form.contact_status) }}
       {{ form_row(form.category) }}
-      {{ form_row(form.tags) }}
+      {{ form_row(form.tag) }}
       <div class="extra_space"></div>
       {{ form_row(form.contact_name) }}
       {{ form_row(form.contact_login) }}
