--- a/Template/default/backend/form/edit.person.contact.twig
+++ b/Template/default/backend/form/edit.person.contact.twig
@@ -29,7 +29,7 @@
       <div class="edit_button">
         <input type="button" value=".." title="{{ 'Edit categories'|trans }}" onclick="self.location.href='{{ FRAMEWORK_URL ~ route.category }}';return false;" />
       </div>
-      {{ form_row(form.tags) }}
+      {{ form_row(form.tag) }}
       <div class="edit_button">
         <input type="button" value=".." title="{{ 'Edit tags'|trans }}" onclick="self.location.href='{{ FRAMEWORK_URL ~ route.tag }}';return false;" />
       </div>  
