--- a/Template/default/backend/form/edit.person.contact.twig
+++ b/Template/default/backend/form/edit.person.contact.twig
@@ -24,7 +24,17 @@
           {% endif %}
        </div>
       </div>
-      {{ form_row(form.contact_status) }}
+      
+      {# hide the contact_name field, with form_row(form.contact_name) you can use it as regular text field #}
+      {{ form_widget(form.contact_name, {'attr': {'class':'hidden'}} ) }}
+      
+      {# hide the contact_login field, with form_row(form.contact_login) you can use it as regular text field #}
+      {{ form_widget(form.contact_login, {'attr': {'class':'hidden'}} ) }}
+      
+      {% if form.contact_id.vars.value > 0 %}
+        {{ form_row(form.contact_status) }}
+      {% endif %}
+      
       {{ form_row(form.category) }}
       <div class="edit_button">
         <input type="button" value=".." title="{{ 'Edit categories'|trans }}" onclick="self.location.href='{{ FRAMEWORK_URL ~ route.category }}';return false;" />
