--- a/Template/default/backend/form/list.title.twig
+++ b/Template/default/backend/form/list.title.twig
@@ -20,15 +20,17 @@
     <tbody>
       {% set i = 0 %}
       {% for title in titles %}
-        <tr class="{{ cycle(['flop','flip'], i) }}">
-          <td class="title_id"><a href="{{ FRAMEWORK_URL }}{{ route.edit|replace({'{title_id}':title.title_id}) }}">{{ '%03d'|format(title.title_id) }}</a></td>
-          <td class="title_identifier"><a href="{{ FRAMEWORK_URL }}{{ route.edit|replace({'{title_id}':title.title_id}) }}">{{ title.title_identifier|upper }}</a></td>
-          <td class="title_short">{{ title.title_short }}</td>
-          <td class="title_short translated">{{ title.title_short }} &rArr; {{ title.title_short|trans }}</td>
-          <td class="title_long">{{ title.title_long }}</td>            
-          <td class="title_long translated">{{ title.title_long }} &rArr; {{ title.title_long|trans }}</td>
-        </tr>
-        {% set i = i+1 %}
+        {% if title.title_identifier != 'NO_TITLE' %}
+          <tr class="{{ cycle(['flop','flip'], i) }}">
+            <td class="title_id"><a href="{{ FRAMEWORK_URL }}{{ route.edit|replace({'{title_id}':title.title_id}) }}">{{ '%03d'|format(title.title_id) }}</a></td>
+            <td class="title_identifier"><a href="{{ FRAMEWORK_URL }}{{ route.edit|replace({'{title_id}':title.title_id}) }}">{{ title.title_identifier|upper }}</a></td>
+            <td class="title_short">{{ title.title_short }}</td>
+            <td class="title_short translated">{{ title.title_short }} &rArr; {{ title.title_short|trans }}</td>
+            <td class="title_long">{{ title.title_long }}</td>            
+            <td class="title_long translated">{{ title.title_long }} &rArr; {{ title.title_long|trans }}</td>
+          </tr>
+          {% set i = i+1 %}
+        {% endif %}
       {% endfor %}
     </tbody>
   </table>    
