import from KeepInTouch is in progress

--- a/Template/default/backend/import/css/keepintouch.css
+++ b/Template/default/backend/import/css/keepintouch.css
@@ -7,4 +7,7 @@
   @license MIT License (MIT) http://www.opensource.org/licenses/MIT
 */
 
-
+.red {
+  color: #da251d;
+  background-color: transparent;
+}
