--- a/Template/default/backend/import/execute.keepintouch.twig
+++ b/Template/default/backend/import/execute.keepintouch.twig
@@ -13,9 +13,10 @@
 {% endblock %}
 
 {% block content %}
+  <h1>{{ 'Import contacts from KeepInTouch (KIT)'|trans }}</h1>
   {% if message|length > 0 %}
     <div class="message">{{ message }}</div>
   {% endif %}
+  
     
-    <p>KIT import</p>
 {% endblock content %}
