handling for extra fields in progress

--- a/Template/default/backend/form/edit.category.twig
+++ b/Template/default/backend/form/edit.category.twig
@@ -8,7 +8,7 @@
 #}
 
 <div class="contact_form">
-  <form action="{{ FRAMEWORK_URL }}{{ route.action }}" method="post" {{ form_enctype(form) }}>
+  <form action="{{ FRAMEWORK_URL ~ route.action }}" method="post" {{ form_enctype(form) }}>
     {{ form_errors(form) }}
 
     {{ form_row(form.category_type_id) }}
@@ -39,7 +39,7 @@
       </div>
     {% endif %}  
       
-    {{ form_rest(form) }}
+    {#{ form_rest(form) }#}
     
     {% if form.vars.value.category_type_id > 0 %}
       <div class="clear"></div>
@@ -49,6 +49,15 @@
       </div>
     {% endif %}
 
+    {{ form_row(form.category_extra_fields) }}
+    {{ form_rest(form) }} 
+    {{ form_row(form.add_extra_field) }}  
+    
+    <div class="edit_button">
+      <input type="button" value=".." title="{{ 'Edit extra fields'|trans }}" onclick="self.location.href='{{ FRAMEWORK_URL ~ route.extra }}';return false;" />
+    </div>
+      
+      
     <div>
       <label for="submit">&nbsp;</label>
       <input type="submit" name="submit" />
