--- a/Template/default/backend/import/execute.keepintouch.twig
+++ b/Template/default/backend/import/execute.keepintouch.twig
@@ -18,5 +18,14 @@
     <div class="message">{{ message }}</div>
   {% endif %}
   
+  {% if app.translator.locale == 'de' %}
+    {# german translation #} 
+    <p>Es existieren <b>{{ contacts.detected }}</b> KeepInTouch Datensätze, die in kitFramework <i>Contact</i> importiert werden können.</p>
+    <p>Tatsächlich wurden <b>{{ contacts.imported }}</b> Datensätze importiert. Hierbei wurden alle Datensätze übersprungen, die bereits in <i>Contact</i> existieren.</p>
+  {% else %}
+    {# english translation #}
+    <p>Detected <b>{{ contacts.detected }}</b> KeepInTouch contact records which can imported to kitFramework <i>Contact</i>.</p>
+    <p>Really imported where <b>{{ contacts.imported }}</b>. Skipped records which are already exists.</p>
+  {% endif %}
     
 {% endblock content %}
