--- a/Template/default/backend/form/list.contact.twig
+++ b/Template/default/backend/form/list.contact.twig
@@ -69,6 +69,8 @@
                       <a href="{{ FRAMEWORK_URL ~ route.contact.company|replace({'{contact_id}':value}) }}">{{ '%05d'|format(value) }}</a>
                     {% endif %}
                   </td>
+                {% elseif column == 'contact_type' %}
+                  <td class="{{ column }}">{{ value|trans }}</td>
                 {% elseif column == 'communication_email' %}
                   <td class="{{ column }}"><a href="mailto:{{ value }}">{{ value }}</a></td>
                 {% else %}
