--- a/Template/default/backend/import/start.keepintouch.twig
+++ b/Template/default/backend/import/start.keepintouch.twig
@@ -6,9 +6,9 @@
   @copyright 2013 Ralf Hertsch <ralf.hertsch@phpmanufaktur.de>
   @license MIT License (MIT) http://www.opensource.org/licenses/MIT
 #}
-{% extends template_file('@framework', 'body.twig') %}
+{% extends getTemplateFile('@framework', 'body.twig') %}
 {% block stylesheet %}
-	{{ parent() }}
+    {{ parent() }}
   <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/backend/import/css/keepintouch.css" media="screen, projection" />
   <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 {% endblock %}
@@ -19,7 +19,7 @@
     <div class="message">{{ message }}</div>
   {% endif %}
   {% if app.translator.locale == 'de' %}
-    {# german translation #}    
+    {# german translation #}
     <p><b>Achtung!</b></p>
     <p><i></i>kitFramework Contact verfügt über eine andere Datenstruktur als KeepInTouch (KIT).</p>
     <ul class="icons-ul">
@@ -41,9 +41,9 @@
       <li>Imported will be only <i>active</i> or <i>locked</i> KIT records but no records which are marked as deleted.</li>
     </ul>
   {% endif %}
-    
+
   {% if import_is_possible %}
     <p><i class="icon-puzzle-piece icon-3x pull-left"></i>&nbsp;<a href="{{ FRAMEWORK_URL }}/admin/contact/import/keepintouch/execute">{{ 'Start import from KeepInTouch'|trans }}</a></p>
   {% endif %}
-    
+
 {% endblock content %}
