The @framework templates are move to @phpManufaktur/Basic/Template

--- a/Template/default/backend/simple/edit.company.contact.twig
+++ b/Template/default/backend/simple/edit.company.contact.twig
@@ -6,9 +6,9 @@
   @copyright 2013 Ralf Hertsch <ralf.hertsch@phpmanufaktur.de>
   @license MIT License (MIT) http://www.opensource.org/licenses/MIT
 #}
-{% extends getTemplateFile('@framework', 'body.twig') %}
+{% extends getTemplateFile('@phpManufaktur/Basic/Template', 'framework/body.twig') %}
 {% block stylesheet %}
-	{{ parent() }}
+    {{ parent() }}
   <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/backend/simple/css/contact.css" media="screen, projection" />
   <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/backend/simple/css/company.contact.css" media="screen, projection" />
 {% endblock %}
