--- a/Template/default/backend/import/start.keepintouch.twig
+++ b/Template/default/backend/import/start.keepintouch.twig
@@ -6,7 +6,7 @@
   @copyright 2013 Ralf Hertsch <ralf.hertsch@phpmanufaktur.de>
   @license MIT License (MIT) http://www.opensource.org/licenses/MIT
 #}
-{% extends getTemplateFile('@framework', 'body.twig') %}
+{% extends getTemplateFile('@phpManufaktur/Basic/Template', 'framework/body.twig') %}
 {% block stylesheet %}
     {{ parent() }}
   <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/backend/import/css/keepintouch.css" media="screen, projection" />
