--- a/Template/default/backend/simple/edit.tag.twig
+++ b/Template/default/backend/simple/edit.tag.twig
@@ -6,9 +6,9 @@
   @copyright 2013 Ralf Hertsch <ralf.hertsch@phpmanufaktur.de>
   @license MIT License (MIT) http://www.opensource.org/licenses/MIT
 #}
-{% extends getTemplateFile('@framework', 'body.twig') %}
+{% extends getTemplateFile('@phpManufaktur/Basic/Template', 'framework/body.twig') %}
 {% block stylesheet %}
-	{{ parent() }}
+    {{ parent() }}
   <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/backend/simple/css/contact.css" media="screen, projection" />
 {% endblock %}
 
@@ -21,10 +21,10 @@
   {% if message|length > 0 %}
     <div class="message">{{ message }}</div>
   {% endif %}
-    
+
   {% include '@phpManufaktur/Contact/Template/default/backend/form/edit.tag.twig' %}
-    
+
   <div>
     <p><a href="{{ FRAMEWORK_URL }}/admin/contact/simple/tag/list">{{ 'Change to the overview'|trans }}</a></p>
-  </div>  
+  </div>
 {% endblock content %}
