--- a/Template/default/backend/simple/list.contact.twig
+++ b/Template/default/backend/simple/list.contact.twig
@@ -6,9 +6,9 @@
   @copyright 2013 Ralf Hertsch <ralf.hertsch@phpmanufaktur.de>
   @license MIT License (MIT) http://www.opensource.org/licenses/MIT
 #}
-{% extends getTemplateFile('@framework', 'body.twig') %}
+{% extends getTemplateFile('@phpManufaktur/Basic/Template', 'framework/body.twig') %}
 {% block stylesheet %}
-	{{ parent() }}
+    {{ parent() }}
   <link rel="stylesheet" type="text/css" href="{{ MANUFAKTUR_URL }}/Contact/Template/default/backend/simple/css/list.css" media="screen, projection" />
   <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 {% endblock %}
@@ -17,7 +17,7 @@
   {% if message|length > 0 %}
     <div class="message">{{ message }}</div>
   {% endif %}
-  
-  {% include '@phpManufaktur/Contact/Template/default/backend/form/list.contact.twig' %}   
-    
+
+  {% include '@phpManufaktur/Contact/Template/default/backend/form/list.contact.twig' %}
+
 {% endblock content %}
